# cluster-api-provider-azure

./: .codespellignore  .custom-gcl.yml  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .markdownlinkcheck.json  .pre-commit-config.yaml  .travis.yml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  PROJECT  README.md  RELEASE.md  SECURITY_CONTACTS  SUPPORT.md  Tiltfile  WORKSPACE  azure-pipelines.yml  cloudbuild.yaml  clusteractuator.go  clusterctl-settings.json  deployment-params.json  deployment-template.json  e2e.mk  generate-yaml.sh  go.mod  go.sum  machine.yaml  machineactuator.go  machineactuator_test.go  main.go  metadata.yaml  netlify.toml  (+9 more)
hack/: BUILD.bazel  boilerplate.go.txt  codecov-ignore.sh  collect-logs.sh  common-vars.sh  community-gallery.sh  create-custom-cloud-provider-config.sh  create-dev-cluster.sh  create-identity-secret.sh  ensure-acr-cleanup-schedule.sh  ensure-acr-login.sh  ensure-azcli.sh  ensure-envsubst.sh  ensure-git-folder.sh  ensure-go.sh  ensure-kind.sh  ensure-kubectl.sh  ensure-tags.sh  ensure-trivy.sh  fetch-nvidia-resources.sh  gen-flavors.sh  get-project-maintainers.sh  install-cert-manager.sh  install-go.sh  kustomize-sub.sh  lint-azure-latest.sh  manual-testing.sh  parse-prow-creds.sh  print-workspace-status.sh  tools.go  update-vendor.sh  util.sh  verify-container-images.sh  verify-shellcheck.sh  verify-starlark.sh  version.sh
hack/boilerplate/: boilerplate.Dockerfile.txt  boilerplate.py  boilerplate_test.py
hack/boilerplate/test/: BUILD  pass.go
hack/debugging/: Readme.md  kubectl-capz-map  kubectl-capz-ssh
hack/jaeger/: kustomization.yaml
hack/jaeger/resources/: role.yaml
hack/log/: log-dump-daemonset-windows.yaml  log-dump-daemonset.yaml  log-dump.sh  redact.sh
hack/observability/: kustomization.yaml  readme.md
hack/observability/cluster-api-visualizer/: fetch-visualizer-resources.sh
hack/observability/cluster-api-visualizer/chart/: Chart.yaml  values.yaml
hack/observability/jaeger/: fetch-jaeger-resources.sh  kustomization.yaml  readme.md  sidecar_injection.yaml
hack/observability/jaeger/chart/: Chart.yaml  LICENSE  README.md  values.yaml
hack/observability/jaeger/resources/: kustomization.yaml
hack/observability/opentelemetry/: controller-manager-patch.yaml  fetch-otel-resources.sh  readme.md  values.yaml
hack/observability/opentelemetry/chart/: Chart.yaml
hack/observability/prometheus/: fetch-prometheus-resources.sh  kustomization.yaml  readme.md
hack/observability/prometheus/resources/: bundle.yaml  capz_metrics_service.yaml  kustomization.yaml  prometheus.yaml
hack/terraform-gcr-init/: README.md  user_project.tf  variables.tf
hack/tools/: go.mod  go.sum  tools.go  tools.yaml
hack/tools/create_ref_images/: config.yaml  create_ref_images.go  ref_images.go
pkg/cloud/azure/: BUILD.bazel  defaults.go  fake_interfaces.go  interfaces.go  main.go
pkg/cloud/azure/actuators/: BUILD.bazel  clients.go  getters.go  helpers.go  helpers_test.go  machine_scope.go  machine_scope_test.go  scope.go
pkg/cloud/azure/converters/: BUILD.bazel  resourcegroup.go  vm.go  vnet.go
pkg/cloud/azure/mocks/: BUILD.bazel  service_mock.go
pkg/cloud/azure/providerconfig/: doc.go
pkg/cloud/azure/services/: BUILD.bazel  errors.go  fake_interfaces.go  interfaces.go  mock_interfaces.go  mock_interfaces_helper.go
pkg/deployer/: BUILD.bazel  deployer.go  deployer_test.go
test/e2e/: BUILD.bazel  LoadBalancerProfile_CRUD_tests.go  Makefile  aks.go  aks_adopt.go  aks_autoscaler.go  aks_azure_cluster_autoscaler.go  aks_byo_node.go  aks_byo_node_debug.go  aks_clusterclass.go  aks_fleets_member.go  aks_machinepools.go  aks_maintenance_configuration.go  aks_managedcluster_adopt.go  aks_marketplace.go  aks_node_labels.go  aks_node_taints.go  aks_patches.go  aks_public_ip_prefix.go  aks_spot.go  aks_tags.go  aks_test.go  aks_upgrade.go  aks_versions.go  aks_webhooks.go  azure.go  azure_accelnet.go  azure_apiserver_ilb.go  azure_autoscaling_from_zero.go  azure_clusterproxy.go  azure_csidriver.go  azure_edgezone.go  azure_failuredomains.go  azure_gpu.go  azure_identity.go  azure_kuberay.go  azure_lb.go  azure_logcollector.go  azure_machinepool_drain.go  azure_machinepool_stopped_vm.go  (+40 more)
test/e2e/auth/: creds.go
test/e2e/config/: BUILD.bazel  azure-dev.yaml  azwi.yaml  config.go
test/e2e/config/base/: provider-components.yaml  v1alpha1_machine.yaml
test/e2e/data/: availableZonesPerLocation.json
test/e2e/data/cluster-autoscaler/: deployment.yaml.tmpl  rbac.yaml
test/e2e/data/infrastructure-azure/: cluster-template-kcp-adoption.yaml  cluster-template-kcp-remediation.yaml  cluster-template-kcp-scale-in.yaml  cluster-template-md-remediation.yaml  cluster-template-mhc.yaml
test/e2e/data/kubetest/: conformance-dra-ginkgo-v2.yaml  conformance-dual-stack-ginkgo-v2.yaml  conformance-fast-ginkgo-v2.yaml  conformance-fast.yaml  conformance-ginkgo-v2.yaml  conformance-ipv6-ginkgo-v2.yaml  conformance.yaml  repo-list-k8sprow.yaml  repo-list.yaml  upstream-windows-ginkgo-v2.yaml  upstream-windows-serial-slow-ginkgo-v2.yaml  upstream-windows-serial-slow.yaml  upstream-windows.yaml
test/e2e/fixtures/: node-machine.yaml
test/e2e/framework/: clean_up.go  convenience.go  doc.go  framework_flags.go  types.go
test/e2e/generators/: cabpk.go  capi.go  capz.go  kcp.go
test/e2e/kubernetes/deployment/: deployment.go
test/e2e/kubernetes/job/: job.go
test/e2e/kubernetes/namespace/: namespace.go
test/e2e/kubernetes/networkpolicy/: networkpolicy.go
test/e2e/kubernetes/node/: node.go
test/e2e/kubernetes/pod/: pod.go
test/e2e/kubernetes/pvc/: pvc.go
test/e2e/kubernetes/storageclass/: storageclass.go
test/e2e/kubernetes/windows/: windows.go
test/e2e/util/kind/: BUILD.bazel  setup.go
test/e2e/utils/: cleanup_e2e_resources.go
test/e2e/workloads/nsenter/: daemonset.yaml
test/e2e/workloads/policies/: backend-policy-allow-egress-pod-label.yaml  backend-policy-allow-egress-pod-namespace-label.yaml  backend-policy-allow-ingress-pod-label.yaml  (+3 more)
(+3027 files in other folders)
