load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all-srcs",
    srcs = glob(["**"]),
)

exports_files(glob([
    "boilerplate/*.txt",
    "*.sh",
]))

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/hack",
    deps = [
        "//vendor/github.com/Azure/azure-sdk-for-go/services/compute/mgmt/2019-03-01/compute/computeapi:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2018-12-01/network/networkapi:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/resources/mgmt/2018-05-01/resources/resourcesapi:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/client-gen:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/conversion-gen:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/deepcopy-gen:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/defaulter-gen:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/informer-gen:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/lister-gen:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/register-gen:go_default_library",
        "//vendor/k8s.io/code-generator/cmd/set-gen:go_default_library",
        "//vendor/sigs.k8s.io/controller-tools/cmd/controller-gen:go_default_library",
        "//vendor/sigs.k8s.io/testing_frameworks/integration:go_default_library",
    ],
)
