load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "azure.go",
        "kube.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/test/e2e",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/openshift/cluster-api/cmd/clusterctl/clientcmd:go_default_library",
        "//vendor/github.com/openshift/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/github.com/openshift/cluster-api/pkg/client/clientset_generated/clientset/typed/cluster/v1alpha1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["e2e_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/cloud/azure/actuators:go_default_library",
        "//pkg/cloud/azure/actuators/machine:go_default_library",
        "//pkg/cloud/azure/services/resources:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)
