# Copyright 2019 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_test")

KUSTOMIZE = "@io_k8s_sigs_kustomize//:kustomize"

KUSTOMIZE_CMD = "$(location %s) build $(@D)" % KUSTOMIZE

alias(
    name = "e2e",
    actual = ":go_default_test",
)

go_test(
    name = "go_default_test",
    size = "large",
    srcs = [
        "azure_test.go",
        "e2e_suite_test.go",
    ],
    args = [
        "-kindBinary=$(location @io_k8s_sigs_kind//:kind)",
        "-kubectlBinary=$(location @io_k8s_kubernetes//cmd/kubectl:kubectl)",
        "-providerComponentsYAML=$(location provider-components-e2e.yaml)",
        "-managerImageTar=$(location //cmd/manager:manager-amd64.tar)",
        "-credFile=$(location manifests/provider-credentials.profile)",
        "-clusterYAML=$(location manifests/cluster.yaml)",
        "-machineYAML=$(location manifests/machines.yaml)",
        "-regionFile=$(location region.txt)",
    ],
    data = [
        "manifests/addons.yaml",
        "manifests/cluster.yaml",
        "manifests/machines.yaml",
        "manifests/provider-credentials.profile",
        "provider-components-e2e.yaml",
        "region.txt",
        "//cmd/manager:manager-amd64.tar",
        "@io_k8s_kubernetes//cmd/kubectl:kubectl",
        "@io_k8s_sigs_kind//:kind",
    ],
    rundir = ".",
    tags = ["external"],
    deps = [
        "//pkg/apis/azureprovider/v1alpha1:go_default_library",
        "//pkg/cloud/azure/actuators:go_default_library",
        "//pkg/cloud/azure/actuators/machine:go_default_library",
        "//pkg/cloudtest:go_default_library",
        "//pkg/deployer:go_default_library",
        "//test/e2e/config:go_default_library",
        "//test/e2e/util/kind:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/onsi/gomega/gstruct:go_default_library",
        "//vendor/github.com/onsi/gomega/types:go_default_library",
        "//vendor/golang.org/x/crypto/ssh:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/kubernetes/pkg/ssh:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/client/clientset_generated/clientset:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/util:go_default_library",
    ],
)

genrule(
    name = "manifests",
    srcs = [
        "//cmd/clusterctl/examples/azure:addons.yaml",
        "//cmd/clusterctl/examples/azure:cluster.yaml.template",
        "//cmd/clusterctl/examples/azure:cluster-network-spec.yaml.template",
        "//cmd/clusterctl/examples/azure:controlplane-machine.yaml.template",
        "//cmd/clusterctl/examples/azure:controlplane-machines-ha.yaml.template",
        "//cmd/clusterctl/examples/azure:credentials.yaml.template",
        "//cmd/clusterctl/examples/azure:generate-yaml.sh",
        "//cmd/clusterctl/examples/azure:machine-deployment.yaml.template",
        "//cmd/clusterctl/examples/azure:machines.yaml.template",
        "//cmd/clusterctl/examples/azure:provider-components-base.yaml",
        "manifests/provider-credentials.sh",
    ],
    outs = [
        "manifests/addons.yaml",
        "manifests/cluster.yaml",
        "manifests/controlplane-machine.yaml",
        "manifests/controlplane-machines-ha.yaml",
        "manifests/machine-deployment.yaml",
        "manifests/machines.yaml",
        "manifests/provider-components.yaml",
    ],
    cmd = " && ".join([
        "source $(location manifests/provider-credentials.sh)",
        "cp -f $(SRCS) $(@D)",
        " ".join([
            "ENVSUBST=$(location @com_github_a8m_envsubst//cmd/envsubst:envsubst)",
            #"CLUSTERAZUREADM=$(location //cmd/clusterazureadm)",
            "OUTPUT_DIR=$(@D)/manifests",
            "DIR=$(@D)",
            "$(location //cmd/clusterctl/examples/azure:generate-yaml.sh) -f",
        ]),
    ]),
    tools = [
        #"//cmd/clusterazureadm",
        "@com_github_a8m_envsubst//cmd/envsubst:envsubst",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "provider_credentials_profile",
    outs = ["manifests/provider-credentials.profile"],
    cmd = " && ".join([
        "touch $@",
        "export AZURE_ACCESS_KEY_ID=$$(grep ^STABLE_AZURE_ACCESS_KEY_ID bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "export AZURE_SECRET_ACCESS_KEY=$$(grep ^STABLE_AZURE_SECRET_ACCESS_KEY bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "export AZURE_SESSION_TOKEN=$$(grep ^STABLE_AZURE_SESSION_TOKEN bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "echo '[default]' >> $@",
        "echo azure_access_key_id = $$AZURE_ACCESS_KEY_ID >> $@",
        "echo azure_secret_access_key = $$AZURE_SECRET_ACCESS_KEY >> $@",
        "echo azure_session_token = $$AZURE_SESSION_TOKEN >> $@",
    ]),
    stamp = 1,
    visibility = ["//visibility:private"],
)

genrule(
    name = "provider_credentials_env",
    outs = ["manifests/provider-credentials.sh"],
    cmd = " && ".join([
        "touch $@",
        "export AZURE_ACCESS_KEY_ID=$$(grep ^STABLE_AZURE_ACCESS_KEY_ID bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "export AZURE_SECRET_ACCESS_KEY=$$(grep ^STABLE_AZURE_SECRET_ACCESS_KEY bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "export AZURE_SESSION_TOKEN=$$(grep ^STABLE_AZURE_SESSION_TOKEN bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "export AZURE_DEFAULT_REGION=$$(grep ^STABLE_AZURE_DEFAULT_REGION bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "export AZURE_REGION=$$(grep ^STABLE_AZURE_REGION bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "echo export AZURE_ACCESS_KEY_ID=$$AZURE_ACCESS_KEY_ID >> $@",
        "echo export AZURE_SECRET_ACCESS_KEY=$$AZURE_SECRET_ACCESS_KEY >> $@",
        "echo export AZURE_SESSION_TOKEN=$$AZURE_SESSION_TOKEN >> $@",
        "echo export AZURE_DEFAULT_REGION=$$AZURE_DEFAULT_REGION >> $@",
        "echo export AZURE_REGION=$$AZURE_REGION >> $@",
    ]),
    stamp = 1,
    visibility = ["//visibility:private"],
)

genrule(
    name = "e2e-provider-components",
    srcs = [
        "kustomization.yaml",
        "//test:manager-version-patch.yaml",
        "manifests/provider-components.yaml",
    ],
    outs = ["provider-components-e2e.yaml"],
    cmd = " && ".join([
        "cp -f $(SRCS) $(@D)",
        "$(location @io_k8s_sigs_kustomize//:kustomize) build $(@D) > $@",
    ]),
    tools = ["@io_k8s_sigs_kustomize//:kustomize"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "e2e-region",
    outs = ["region.txt"],
    cmd = " && ".join([
        "touch $@",
        "export AZURE_DEFAULT_REGION=$$(grep ^STABLE_AZURE_DEFAULT_REGION bazel-out/stable-status.txt | cut -f2 -d\" \")",
        "echo $$AZURE_DEFAULT_REGION >> $@",
    ]),
    stamp = 1,
    visibility = ["//visibility:private"],
)
