load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/test/e2e/config",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/kelseyhightower/envconfig:go_default_library"],
)
