load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gomock//:gomock.bzl", "gomock")

go_library(
    name = "go_default_library",
    srcs = ["service_mock.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/azureprovider/v1alpha1:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
    ],
)

gomock(
    name = "mocks",
    out = "service_mock.go",
    interfaces = [
        "Service",
        "GetterService",
    ],
    library = "//pkg/cloud/azure:go_default_library",
    package = "mocks",
    visibility = ["//visibility:public"],
)
