load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "actuator.go",
        "reconciler.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/actuators/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cloud/azure:go_default_library",
        "//pkg/cloud/azure/actuators:go_default_library",
        "//pkg/cloud/azure/services/certificates:go_default_library",
        "//pkg/cloud/azure/services/groups:go_default_library",
        "//pkg/cloud/azure/services/internalloadbalancers:go_default_library",
        "//pkg/cloud/azure/services/publicips:go_default_library",
        "//pkg/cloud/azure/services/publicloadbalancers:go_default_library",
        "//pkg/cloud/azure/services/routetables:go_default_library",
        "//pkg/cloud/azure/services/securitygroups:go_default_library",
        "//pkg/cloud/azure/services/subnets:go_default_library",
        "//pkg/cloud/azure/services/virtualnetworks:go_default_library",
        "//pkg/deployer:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/client/clientset_generated/clientset/typed/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/controller/error:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["actuator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/azureprovider/v1alpha1:go_default_library",
        "//pkg/cloud/azure:go_default_library",
        "//pkg/cloud/azure/actuators:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
    ],
)
