load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "actuator.go",
        "annotations.go",
        "reconciler.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/actuators/machine",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/azureprovider/v1alpha1:go_default_library",
        "//pkg/cloud/azure:go_default_library",
        "//pkg/cloud/azure/actuators:go_default_library",
        "//pkg/cloud/azure/converters:go_default_library",
        "//pkg/cloud/azure/services/certificates:go_default_library",
        "//pkg/cloud/azure/services/config:go_default_library",
        "//pkg/cloud/azure/services/networkinterfaces:go_default_library",
        "//pkg/cloud/azure/services/virtualmachineextensions:go_default_library",
        "//pkg/cloud/azure/services/virtualmachines:go_default_library",
        "//pkg/deployer:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/compute/mgmt/2018-10-01/compute:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/client/clientset_generated/clientset/typed/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/controller/error:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["actuator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/azureprovider/v1alpha1:go_default_library",
        "//pkg/cloud/azure:go_default_library",
        "//pkg/cloud/azure/actuators:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/client/clientset_generated/clientset/fake:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/controller/machine:go_default_library",
    ],
)
