load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bastion.go",
        "controlplane.go",
        "node.go",
        "template.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/services/config",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/pkg/errors:go_default_library"],
)
