load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "internalloadbalancers.go",
        "service.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-azure/pkg/cloud/azure/services/internalloadbalancers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/azureprovider/v1alpha1:go_default_library",
        "//pkg/cloud/azure:go_default_library",
        "//pkg/cloud/azure/actuators:go_default_library",
        "//pkg/cloud/azure/services/subnets:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/network/mgmt/2019-04-01/network:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/to:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
